@@ -8,7 +8,8 @@ version 0.9.1
 * Bug fix - crop frame can extend outside image borders now
 * Bug fix - calipers are removed when calibration is cancelled after second attempt
 * Left click on canvas starts new caliper
-
+* Right click cancels caliper at any point when caliper is active
+* Playlists can be created, edited, saved and loaded
 
 version 0.9
 -------------
